# LlmPrivate

./: .gitattributes  .gitignore  PLAN.md  README.md  build.bat  dev.bat  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: error.rs  lib.rs  main.rs  notifications.rs  state.rs  tray.rs
src-tauri/src/api/: server.rs
src-tauri/src/api/routes/: mod.rs
src-tauri/src/backend/: llama_cpp_backend.rs  mod.rs  openclaw_server.rs  stub_backend.rs  traits.rs  types.rs  vision_server.rs
src-tauri/src/commands/: backup.rs  chat.rs  documents.rs  mod.rs  models.rs  openclaw.rs  settings.rs  system.rs
src-tauri/src/db/: connection.rs
src-tauri/src/documents/: chunker.rs  mod.rs  parser.rs  retriever.rs  types.rs
src-tauri/src/models/: downloader.rs  manager.rs  mod.rs  recommended.rs
src-tauri/src/resource/: monitor.rs  types.rs
src/components/agents/: AgentsPage.tsx  SetupWizard.tsx  WhatsAppAllowlistPanel.tsx  WhatsAppPanel.tsx
src/components/chat/: ChatInput.tsx  ChatView.tsx  CodeBlock.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  ModelLoader.tsx
src/components/documents/: DocumentCard.tsx  DocumentChat.tsx  DocumentChatInput.tsx  DocumentList.tsx  DocumentsPage.tsx  FolderPanel.tsx  FolderTreeItem.tsx  RecentDocChats.tsx
src/stores/: agentStore.ts  chatStore.ts  documentStore.ts  modelStore.ts  uiStore.ts
src/types/: chat.ts  document.ts  model.ts  resource.ts
(+9 files in other folders)
